more text close to end

--- a/Anhang/AnhangPflichtenheft.tex
+++ b/Anhang/AnhangPflichtenheft.tex
@@ -9,7 +9,7 @@
 	\item ECC System
 		\begin{itemize}
 		\item Ein neues Package muss im ECC angelegt werden mit dem Namen /CAMELOT/OC.
-		\item Die AUFK Datenbanktabelle muss um ein Feld mit dem Namen ZZ\_ORDER\_COMMENT erweitert werden
+		\item Die AUFK Datenbanktabelle muss um ein Feld mit dem Namen ZZ/\_ORDER/\_COM-MENT erweitert werden
 		\item Ein extra Programm welches eine gefilterte Auswahl an Prozess-, Plan- und Produktions-Aufträgen anzeigt muss erstellt werden.
 		\item Ebenfalls sollen hier jeweils die Kommentare für die Aufträge angezeigt und vom User geändert werden können. 
 		\item Weiterhin soll dieses Programm massenänderungs fähig sein. 
