--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -4,10 +4,9 @@
 
 \subsection{Projektphasen}
 \label{sec:Projektphasen}
-Zur Umsetzung des Projekts standen mir 70 Stunden zur Verfügung. Diese waren sowohl für die Umsetzung des Projekts als auch für die Dokumentation. Vor Projektbeginn wurde das Projekt in mehrere Phasen gesplittet und die Stunden aufgeteilt. Eine grobe Übersicht kann der nachfolgenden Tabelle entnommen werden. 
+Zur Umsetzung des Projekts standen mir 70 Stunden zur Verfügung. Diese waren sowohl für die Umsetzung des Projekts als auch für die Dokumentation gedacht. Vor Projektbeginn wurde das Projekt in mehrere Phasen gesplittet und die Stunden aufgeteilt. Eine grobe Übersicht kann der nachfolgenden Tabelle~\ref{tab:Zeitplanung} entnommen werden. 
 
-Tabelle~\ref{tab:Zeitplanung} zeigt ein Beispiel für eine grobe Zeitplanung.
-\tabelle{Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}\\
+\tabelle{Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}
 Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}.
 
 \subsection{Ressourcenplanung}
