--- a/Inhalt/Implementierungsphase.tex
+++ b/Inhalt/Implementierungsphase.tex
@@ -8,7 +8,7 @@ Bevor mit der eigentlichen Implementierung begonnen wurde, wurde zuerst ein Inte
 
 \subsection{Implementierung der Datenstruktur ECC}
 \label{sec:Implementierung der Datenstruktur ECC}
-Zuerst wurden alle Dictionary-Objekte, welche im \ac{ECC} gebraucht werden, erstellt. Eine Vollständige Liste aller Tabellen Typen, Strukturen, Datenelemente und Domänen können dem Anhang entnommen werden. Außerdem wurde die Datenbank Tabellen wie unter Datenmodell beschrieben implementiert. Die AUFK wurde mittels einem Custom Include um das Feld ZZ\_ORDER\_COMMENT erweitert.
+Zuerst wurden alle Dictionary-Objekte, welche im \ac{ECC} gebraucht werden, erstellt. Eine Vollständige Liste aller Tabellen Typen, Strukturen, Datenelemente und Domänen können dem Anhang entnommen werden. Außerdem wurde die Datenbank Tabellen wie in Kapitel~\ref{sec:Datenmodell}: ~\nameref{sec:Datenmodell} beschrieben implementiert. Die AUFK wurde mittels einem Custom Include um das Feld ZZ\_ORDER\_COMMENT erweitert.
 
 \subsection{Implementierung der Benutzeroberfläche ECC}
 \label{sec:Implementierung der Benutzeroberfläche ECC}
@@ -27,11 +27,11 @@ Die eigentliche Geschäftslogik und Datenbank zugriffe finden alle im Controller
 
 \subsection{Implementierung der COR Erweiterung}
 \label{sec:Implementierung der COR Erweiterung}   
-Um die COR Transaktion (1-3) zu erweitern musste zunächst einmal ein passender Erweiterungspunkt gefunden werden, zum einen einen Screen Exit und zum anderen zwei Function Exits vor und nach dem laden der Daten hat. Verwendet wurde das Enhancement PPCO0020. Diese bietet alle Komponenten, die ich zum anzeigen der Daten benötige. Zuerst wurde das Screen Exit mit einem Label und einem Eingabefeld erweitert und aktiviert. Dann wurde das \ac{PBO} Modul um eine Methode erweitert, dass das Eingabefeld in der COR3 deaktiviert wird, da diese Transaktion nur zum Anzeigen ist. Außerdem wurde in dem Top Include eine globale Struktur angelegt, dessen ZZ\_ORDER\_COMMENT Feld hinter dem Eingabe Feld liegt. In dem ersten Function Exit, wird diese Struktur dann gefüllt. Da der Planer aber auch die Möglichkeit haben soll Kommentar von Prozessaufträgen zu ändern bzw. beim anlegen eines Auftrags anzugeben wird noch ein weiterer Funktionsbaustein benötigt, da der oben genannte, keinen Function Exit für das Speichern hat, von wo wir unsere eigene Speicherlogik aus aufrufen können. Hierzu wurde der Erweiterungspunkt PPCO0007 gewählt. Dieser Erweiterungspunkt liefert einen Function Exit aus welchem dann eine statische Methode aus dem Controller aufgerufen wird damit der geänderte Kommentar nicht nur in der AUFK sondern auch in der /CAMELOT/OC\_COMT gespeichert wird. Und wo zu außerdem \ac{RFC} ausgeführt wird damit der Kommentar ins \ac{APO} transferiert wird. Näheres (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})
+Um die COR Transaktion (1-3) zu erweitern musste zunächst einmal ein passender Erweiterungspunkt gefunden werden, welcher zum einen, einen Screen Exit und zum anderen, zwei Functions Exits vor und nach dem laden der Daten hat. Verwendet wurde das Enhancement PPCO0020. Diese bietet alle Komponenten, die ich zum anzeigen der Daten benötige. Zuerst wurde das Screen Exit erstellt und mittels des Screen Painters ein simpler Screen mit einem Label und einem Eingabefeld erstellt und aktiviert. Dann wurde das \ac{PBO} Modul um eine Methode erweitert, sodass das Eingabefeld in der COR3 deaktiviert wird, da diese Transaktion nur zum Anzeigen ist. Außerdem wurde in dem Top Include eine globale Struktur vom typ AUFK angelegt, dessen ZZ\_ORDER\_COMMENT Feld hinter dem Eingabe Feld liegt. In dem ersten Function Exit, wird diese Struktur dann gefüllt. Da der Planer aber auch die Möglichkeit haben soll Kommentar von Prozessaufträgen zu ändern bzw. beim anlegen eines Auftrags anzugeben wird noch ein weiterer Funktionsbaustein benötigt, da der oben genannte, keinen Function Exit für das Speichern hat, von wo wir unsere eigene Speicherlogik aus aufrufen können. Hierzu wurde der Erweiterungspunkt PPCO0007 gewählt. Dieser Erweiterungspunkt liefert einen Function Exit aus welchem dann eine statische Methode aus dem Controller aufgerufen wird damit der geänderte Kommentar nicht nur in der AUFK sondern auch in der /CAMELOT/OC\_COMT gespeichert wird und von wo außerdem der \ac{RFC} ausgeführt wird damit der Kommentar ins \ac{APO} transferiert wird. Näheres (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})
 
 \subsection{Implementierung der Datenstruktur APO}
 \label{sec:Implementierung der Datenstruktur APO} 
-Nachdem im \ac{ECC} System nun alles Implementiert, muss nun ein großteil der selben Datenstrukturen auch im \ac{APO} angelegt werden. Eine Liste aller Dictionary-Objekte kann dem Anhang entnommen werden. Außerdem wurde die /SAPAPO/ORDFLDS Datenbank Tabelle um ein Feld, ORDER\_COMMENT, erweitert. Im \ac{APO} wird keine extra Datenbank wie im \ac{ECC} benötigt, da für alle Aufträge die /SAPAPO/ORDFLDS Tabelle benutzt werden kann.
+Nachdem im \ac{ECC} System nun alles Implementiert wurde, muss nun ein großteil der selben Datenstrukturen auch im \ac{APO} angelegt werden. Eine Liste aller Dictionary-Objekte kann dem Anhang entnommen werden. Des Weiteren wurde die /SAPAPO/ORDFLDS Datenbank Tabelle um ein Feld, ORDER\_COMMENT, erweitert. Im \ac{APO} wird keine extra Datenbank wie im \ac{ECC} benötigt, da für alle Aufträge die /SAPAPO/ORDFLDS Tabelle benutzt werden kann.
 
 \paragraph{Beispiel}
 Screenshots der Anwendung in der Entwicklungsphase mit Dummy-Daten befinden sich im \Anhang{Screenshots}.
@@ -42,10 +42,10 @@ Screenshots der Anwendung in der Entwicklungsphase mit Dummy-Daten befinden sich
 
 \subsection{Implementierung der Geschäftslogik APO}
 \label{sec:Implementierung der Geschäftslogik APO}  
-Wie im ECC findet auch im APO die gesamte Geschäftlogik im Controller statt. Neben den selben Klassen welche es auch im ECC gibt(Constants, Controller, \ac{GUI}, \ac{ALV}) gibt es eine extra Klasse mit dem Namen /CAMELOT/CL\_OC\_RRP, welche für die \ac{BAdI}s der RRP3 genutzt wird. Außerdem gibt es neben der Funktionsgruppe welche für das Hauptprogramm genutzt wird eine weiter Funktionsgruppe /CAMELOT/OC\_COMMENT mit der Methode /CAMELOT/OC\_COMMENT\_SYNC welche Remote-Enabled ist. Das bedeutet sie kann aus einem anderen System heraus aufgerufen werden. Diese Methode hat als import paramter eine Tabelle mit dem Tabellentyp /CAMELOT/OC\_ORD\_COMMENT\_RFC\_T (siehe \Anhang{Dictionary-Objekte}). Die Strukture der Tabelle beinhaltet nur die Auftragsnummer und den Kommentar um den Traffic möglichst gering zu halten. Die Methode selber sucht mithilfe eines SAP Funktions Modules /SAPAPO/DM\_ORDER\_GET\_ORDID die richtige orderid zu der gegebenen Auftragsnummer. Mithilfe der Orderid und dem Kommentar wird dann die /SAPAPO/ORDFLDS Tabelle geupdatet.  
+Wie im \ac{ECC} findet auch im \ac{APO} die gesamte Geschäftlogik im Controller statt. Neben den selben Klassen welche es auch im \ac{ECC} gibt(Constants, Controller, \ac{GUI}, \ac{ALV}) gibt es eine extra Klasse mit dem Namen /CAMELOT/CL\_OC\_RRP, welche für den \ac{BAdI} und die implizite Erweiterung der RRP3 genutzt wird. Außerdem gibt es neben der Funktionsgruppe welche für das Hauptprogramm genutzt wird eine weiter Funktionsgruppe /CAMELOT/OC\_COMMENT mit der Funktionsmodul /CAMELOT/OC\_COMMENT\_SYNC welche Remote-Enabled ist. Das bedeutet sie kann aus einem anderen System heraus aufgerufen werden. Diese Methode hat als Importparamter eine Tabelle mit dem Tabellentyp /CAMELOT/OC-\_ORD\_COMMENT\_RFC\_T (siehe \Anhang{Dictionary-Objekte}). Diese Methode Funktion dient zum transport der Kommentare vom \ac{ECC} ins \ac{APO}. Die Strukture der Tabelle beinhaltet nur die Auftragsnummer und den Kommentar um den Traffic möglichst gering zu halten. Die Methode selber sucht mithilfe eines SAP Funktionsbausteins /SAPAPO/DM\_ORDER-\_GET\_ORDID die richtige Orderid aus dem Livecache zu der gegebenen Auftragsnummer. Mithilfe der Orderid und dem Kommentar wird dann die /SAPAPO/ORDFLDS Tabelle geupdatet.  
 
 \subsection{Implementierung der RRP3 Erweiterung}
 \label{sec:Implementierung der RRP3 Erweiterung}   
-Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3 Customer-Exits, sondern ein \ac{BAdI} verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac{BAdI} ist, dass der \ac{BAdI} die neuere Objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 erweiterung wurden der \ac{BAdI} /SAPAPO/RRP\_IO\_COL benötigt, um an den Feldkatalog der RRP3 das Feld Order\_Comment anzufügen und diese dann auch mittels einer zweiten Methode zu befüllen. Außerdem musste eine Implicites Enhancement angelegt werden, da es mithilfe von Customer-Exits oder \ac{BAdI}s nicht möglich war die t-style tabelle der einzelnen Elemente in der \ac{ALV} Tabelle zu ändern, was allerding absolut notwendig ist um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac{BAdI}s und des Impliciten Enhancements rufen eine statische Methode in meiner RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode, um sie später gut bei Kunden einzubinden, welche dann wiederum dann wiederum die Instance des Controllers bekommt und eine Methode aufruft.
+Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3, Customer-Exits, sondern ein \ac{BAdI} und eine implizite Erweiterung verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac{BAdI} ist, dass der \ac{BAdI} die neuere Objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 Erweiterung wurden der \ac{BAdI} /SAPAPO/RRP\_IO\_COL benötigt.Mit diesem war es möglich an den Feldkatalog der RRP3 das Feld Order\_Comment anzufügen und dieses dann auch mittels einer zweiten Methode mit den richtigen Kommentaren zu füllen. Außerdem musste eine Implicites Enhancement angelegt werden, da es mithilfe von Customer-Exits oder \ac{BAdI}s nicht möglich war die t-style Tabelle der einzelnen Elemente in der \ac{ALV} Tabelle zu ändern, was allerding absolut notwendig ist um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac{BAdI}s und der impliziten Erweiterung rufen eine statische Methode in der RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode des \ac{BAdI}s, um einen besseren Überblick zu verschaffen und sie später gut bei Kunden implementieren zu können. Diese Methoden holen sich dann die Instance des Controllers bzw. eine wird erstellt und rufen dann die jeweiligen Controller Methoden auf.
 
 \Zwischenstand{Implementierungsphase}{Implementierung}
