--- a/Bibliographie.bib
+++ b/Bibliographie.bib
@@ -38,5 +38,21 @@
   year = {2018},
   owner = {},
   timestamp = {2018.12.4},
-  url = {https://tex.stackexchange.com/}
+  url = {https://tex.stackexchange.com/test}
+}
+
+@BOOK{DDMRP,
+  TITLE = {DDMRP},
+  SUBTITLE = {Demand Driven Material Requirements Planning},
+  AUTHOR = {Ptak and Smith},
+  YEAR = {2016},
+  PUBLISHER = {Industrial Press, Inc},
+}
+
+@BOOK{ABAPObjects,
+  TITLE = {ABAP Objects},
+  SUBTITLE = {},
+  AUTHOR = {Horst Keller, Sascha Krüger},
+  YEAR = {2006},
+  PUBLISHER = {Galileo Press}
 }
