--- a/Tabellen/Nutzwertanalyse.tex
+++ b/Tabellen/Nutzwertanalyse.tex
@@ -1,10 +1,11 @@
 \begin{tabu}{lllllll}
 \rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Kriterien} & \textbf{Max. Punkte} & \textbf{Wichtung} & \textbf{OC Tool} & \textbf{Per Mail}& \textbf{Per Zettel} \\
 Geschwindigkeit & 10 & 4 & 8 & 4 & 6 \\
-\rowcolor{odd}Zuverlässigkeit & 10 & 4 & 10 & 10 & 2 \\
-Komfort & 10 & 1 & 8 & 5 & 2 \\
-\rowcolor{odd}Gestaltungsmöglichkeit & 10 & 1.5 & 2 & 8 & 8 \\
+\rowcolor{odd}Transport & 10 & 4 & 10 & 10 & 1 \\
+Zuverlässigkeit & 10 & 4 & 10 & 8 & 2 \\
+\rowcolor{odd}Komfort & 10 & 1 & 8 & 3 & 2 \\
+Gestaltungsmöglichkeit & 10 & 1.5 & 2 & 8 & 8 \\
 \hline
 \hline
-\rowcolor{odd}\textbf{Gesamt} & & & & & \\
+\rowcolor{odd}\textbf{Gesamt} & & & 123 & 103 & 50 \\
 \end{tabu}
