some updates and todos

--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -13,9 +13,11 @@ Aufgrund der Probleme, die bereits in der Projektbegründung und der Ist-Analyse
 \subsubsection{\gqq{Make or Buy}-Entscheidung}
 \label{sec:MakeOrBuyEntscheidung}
 
-Da es etwas vergleichbares auf dem Markt noch nicht gibt und das Camelot ITLab davon lebt Software zu produzieren und zu verkaufen, würde es natürlich nix bringen die Software zu kaufen. Allerdings stellt sich die Frage selbst produzieren oder von einer fremd Firma oder Freelancern im Namen des Camelot ITLabs entwickeln zu lassen. In der Folgende Tabelle~\ref{tab:MakeOrBuy} werden alle ausschlaggebenden Punkte welche für die jeweilige Option sprechen aufgeführt.
+Da es etwas vergleichbares auf dem Markt noch nicht gibt und das Camelot ITLtodab davon lebt Software zu produzieren und zu verkaufen, würde es natürlich nix bringen die Software zu kaufen. Allerdings stellt sich die Frage selbst produzieren oder von einer fremd Firma oder Freelancern im Namen des Camelot ITLabs entwickeln zu lassen. In der Folgende Tabelle~\ref{tab:MakeOrBuy} werden alle ausschlaggebenden Punkte welche für die jeweilige Option sprechen aufgeführt.
 \tabelle{Make or Buy Analyse}{tab:MakeOrBuy}{MakeOrBuy}\\
 Aufgrund der oben genannten Punkte wurde beschlossen das Projekt selbst durchzuführen.
+
+TODO Projektbegründig
 
 \subsubsection{Projektkosten}
 \label{sec:Projektkosten}
@@ -96,4 +98,8 @@ Wie in jedem anderen Projekt des Camelot ITLabs gelten auch hier die Programmier
 \label{sec:Lastenheft}
 Das Lastenheft findet sich im \Anhang{app:Lastenheft}. 
 
+todo
+
 \Zwischenstand{Analysephase}{Analyse}
+
+todo paar Sätze
