--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -9,7 +9,7 @@ Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants Gm
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit eine Notiz oder eine Beschreibung zu hinterlegen. Das Projektziel ist die Erstellung von Programmen, die dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programm erweitert werden, um dem Planer den bestmöglichen Komfort zu bieten. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen ausgemacht.  Bei der Implementierung wird besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da später ein Kommentarverlauf hinzugefügt werden soll, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
+Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit eine Notiz oder eine Beschreibung zu hinterlegen. Das Projektziel ist die Erstellung von Programmen, die dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programm entsprechend erweitert werden, um dem Planer den bestmöglichen Komfort zu bieten. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen ausgemacht.  Bei der Implementierung wird besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da später ein Kommentarverlauf hinzugefügt werden soll, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
 
 \subsection{Projektumfeld}
 \label{sec:Projektumfeld}
@@ -23,3 +23,5 @@ Tabelle~\ref{tab:BeteiligtePer} zeigt alle Personen die an dem Projekt beteiligt
 \subsection{Projektbegründung} 
 \label{sec:Projektbegruendung}
 Das Projekt wurde von dem Camelot ITLab angenommen, da es ein häufig von Kunden angefragtes und hilfreiches Feature ist, welches in der standard SAP Lösung fehlt.
+
+//TODO warum Notizen usw.
