--- a/Inhalt/Fazit.tex
+++ b/Inhalt/Fazit.tex
@@ -4,6 +4,9 @@
 
 \subsection{Soll-/Ist-Vergleich}
 \label{sec:SollIstVergleich}
+
+todo es hat geklappt
+
 Die Zeit von 70 Stunden und der in Abschnitt ~\ref{sec:Projektphasen} (\nameref{sec:Projektphasen}) erstellte Projektplan wurden insgesamt eingehalten auch wenn es bei den einzelnen Projektphasen zu Verschiebungen gekommen ist. Die Implementierung im \ac{ECC} System hat etwas länger gedauert als zuerst angenommen, dafür konnte ein Großteil der Logik ins \ac{APO} System kopiert und hier einige Zeit gespart werden. In der Tabelle ~\ref{tab:Soll-/Ist-Vergleich}: ~\nameref{tab:Soll-/Ist-Vergleich} wird die tatsächlich benötigte Zeit gegenüber die geplante Zeit gestellt und verglichen.
 \tabelle{Soll-/Ist-Vergleich der Projektphasen Zeitplanung}{tab:Soll-/Ist-Vergleich}{Zeitnachher}
 
